--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>register</title>
+    <title>Register</title>
 </head>
 <body>
+
 <h2>User Registration</h2>
 
-<form>
-    <label>Full Name :</label><br>
-    <input type="text"><br><br>
+<!-- Registration form -->
+<form th:action="@{/register}" th:object="${user}" method="post">
 
-    <label>Email :</label><br>
-    <input type="email"><br><br>
+    <label>Name:</label><br>
+    <input type="text" th:field="*{name}"><br><br>
 
-    <label>Password :</label><br>
-    <input type="password"><br><br>
+    <label>Email:</label><br>
+    <input type="email" th:field="*{email}"><br><br>
 
-    <button type="submit">Registrater</button>
+    <label>Password:</label><br>
+    <input type="password" th:field="*{password}"><br><br>
+
+    <label>Role:</label><br>
+    <select th:field="*{role}">
+        <option value="USER">User</option>
+        <option value="ADMIN">Admin</option>
+    </select><br><br>
+
+    <button type="submit">Register</button>
 </form>
+
 </body>
 </html>
