added the cartController, productController showing the data in database and fixing the bugs in cart.html and product.html

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>admin</title>
+    <title>Admin Dashboard</title>
 </head>
 <body>
 <h1>Admin Panel</h1>
 <nav>
-    <a href="add-product.html">Add Product</a>
-    <a href="delete-product.html">Delete Product</a>
-    <a href="products.html">View Products</a>
+    <a th:href="@{/admin/add-product}">Add Product</a>
+    <a th:href="@{/admin/delete-product}">Delete Product</a>
+    <a th:href="@{/products}">View Products</a>
 </nav>
 </body>
 </html>
