--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
@@ -9,13 +9,14 @@
     E-Commerce
 </h1>
 <nav>
-    <a href="/">Home</a>
-    <a href="/products">Products</a>
-    <a href="/cart">cart</a>
-    <a href="/register">register</a>
-    <a href="/login">login</a>
-    <a href="/admin/add-product">adminAdd</a>
-    <a href="/admin/delete-product">adminDelete</a>
+    <a th:href="@{/}">Home</a>
+    <a th:href="@{/products}">Products</a>
+    <a th:href="@{/cart}">cart</a>
+    <a th:href="@{/register}">register</a>
+    <a th:href="@{/login}">login</a>
+    <a th:href="@{admin}">Admin</a>
+<!--    <a href="/admin/add-product">adminAdd</a>-->
+<!--    <a href="/admin/delete-product">adminDelete</a>-->
 </nav>
 <h2>Welcome to E-Commerce</h2>
 </body>
