--- a/src/main/resources/templates/add-product.html
+++ b/src/main/resources/templates/add-product.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>add product</title>
+    <title>Add Product</title>
 </head>
 <body>
-<h2>Add new products</h2>
-<form>
-    <label>Product name :</label><br>
-    <input type="text"><br><br>
+
+<h2>Add New Product</h2>
+
+<!-- Form submits to ProductController -->
+<form th:action="@{/admin/add-product}"
+      th:object="${product}"
+      method="post">
+
+    <label>Product Name :</label><br>
+    <input type="text" th:field="*{name}"><br><br>
+
+    <label>Description :</label><br>
+    <textarea th:field="*{description}"></textarea><br><br>
 
     <label>Price :</label><br>
-    <input type="number"><br><br>
+    <input type="number" step="0.01" th:field="*{price}"><br><br>
 
-    <label>Delivery Days :</label><br>
-    <input type="text"><br><br>
-
-    <label>Product image :</label><br>
-    <input type="file"><br><br>
+    <label>Quantity :</label><br>
+    <input type="number" th:field="*{quantity}"><br><br>
 
     <button type="submit">Add Product</button>
 </form>
+
 </body>
 </html>
