--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -1,30 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>cart</title>
+    <title>Your cart</title>
 </head>
 <body>
-<h2>Your Cart</h2>
-<div>
-    <h3>Moblie</h3>
-    <p>Price : 15000</p>
-    <button>Remove</button>
-</div>
-<hr>
-<div>
-    <h3>laptop</h3>
-    <p>Price : 15000</p>
-    <button>Remove</button>
-</div>
-<hr>
-<div>
-    <h3>CPU</h3>
-    <p>Price : 15000</p>
-    <button>Remove</button>
-</div>
-<hr>
-<h3>Total : 65000</h3>
-<button>Buy Now</button>
+<h2>Your Shopping Cart</h2>
+
+
+<table border="1" cellpadding="10">
+    <tr>
+        <th>Product Name</th>
+        <th>Price</th>
+        <th>Quantity</th>
+        <th>Total</th>
+        <th>Action</th>
+    </tr>
+
+    <tr th:each="item : ${cartItems}">
+        <td th:text="${item.product.name}"></td>
+        <td th:text="${item.product.price}"></td>
+
+        <td>
+            <a th:href="@{/cart/decrease/{id}(id=${item.id})}">-</a>
+            <span th:text="${item.quantity}"></span>
+            <a th:href="@{/cart/increase/{id}(id=${item.id})}">+</a>
+        </td>
+
+        <td th:text="${item.product.price * item.quantity}"></td>
+
+        <td>
+            <a th:href="@{/cart/remove/{id}(id=${item.id})}">Remove</a>
+        </td>
+    </tr>
+
+
+</table>
+<br>
+<h3> Total Amount : <span th:text="${total}"></span></h3>
+<br>
+
+<a href="/products">Continue Shopping</a>
+<a href="/cart/clear">Clear Cart</a>
+<a href="/checkout">Checkout</a>
 </body>
 </html>
