--- a/src/main/resources/templates/delete-product.html
+++ b/src/main/resources/templates/delete-product.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>delete product</title>
+    <title>Delete product</title>
 </head>
 <body>
-<h1>delete product</h1>
-<form>
+<h1>Delete product</h1>
+<form th:action="@{/admin/delete-product}" method="post">
     <label>Enter product ID :</label>
-    <input type ="number"><br><br>
+    <input type ="number" name="id" required><br><br>
     <button type="submit">Delete</button>
 </form>
 </body>
