--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,21 +6,22 @@
 </head>
 <body>
 
-<h2>Login</h2>
+<h2>User Login</h2>
 
 <!-- Login form -->
 <form th:action="@{/login}" method="post">
 
     <label>Email:</label><br>
     <!-- name attribute is required for @RequestParam -->
-    <input type="email" name="email"><br><br>
+    <input type="email" name="email" placeholder="Enter email"><br><br>
 
     <label>Password:</label><br>
-    <input type="password" name="password"><br><br>
+    <input type="password" name="password" placeholder="Enter password"><br><br>
+    <p style="color:red" th:if"${error}" th:text="${error}"></p>
 
     <button type="submit">Login</button>
 </form>
-
+<!--<p th:if="${error}" th:text="${error}" style="color:red"></p>-->
 <p>
     New User?
     <a th:href="@{/register}">Register here</a>
