--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -7,8 +7,6 @@
 <body>
 <h2>All Products</h2>
 
-<h2>All products</h2>
-
 
 <form action="/products" method="get">
     <input type="text" name="keyword" placeholder="Search Product...">
@@ -25,9 +23,14 @@
         Stock: <span th:text="${product.quantity}"></span><br><br>
 
         <button>Buy Now</button>
-        <form th:action="@{/cart/add/{id}(id=${product.id})}" method="post">
+        <form th:action="@{/cart/add/{productId}(productId=${product.id})}" method="post">
             <button type="submit">Add to Cart</button>
         </form>
+
+
+
+
+
     </div>
 </div>
 
